Fixed alignment issues with restaurant description with the cards on smaller (iPhone 5) or larger (iPhone 6 Plus) devices.

--- a/frontend/scss/cards.scss
+++ b/frontend/scss/cards.scss
@@ -49,16 +49,6 @@ td-card {
   }
 }
 
-.restaurant-card-bottom {
-  position: absolute;
-  bottom: 0px;
-  font-family: 'Droid Sans', 'Helvetica Neue';
-  width: 100%;
-  background: #fff;
-  height: $card-bottom-height;
-}
-
-
 .restaurant-card-poster-glass {
   background-size: cover;
   position: absolute;
@@ -74,23 +64,27 @@ td-card {
 
 .restaurant-card-details-container {
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
 
 .restaurant-card-description {
+  position: absolute;
   width: 100%;
   margin: 0;
-  padding: 15px;
+  padding: 15px 0 15px 15px;
   overflow: hidden;
-  box-shadow: 0px -10px 10px 0px rgba(0,0,0,0.4);
+  box-shadow: 0px -10px 10px 0 rgba(0,0,0,0.4);
+  bottom: 0;
+  font-family: 'Droid Sans', 'Helvetica Neue';
+  background: #fff;
+  height: $card-bottom-height;
 
   span {
-    position: absolute;
+    //position: absolute;
     right: 0;
-    top: 45px;
   }
 
   .platform-browser & {
